--- a/GroupProject/Base.lproj/Main.storyboard
+++ b/GroupProject/Base.lproj/Main.storyboard
@@ -10,51 +10,53 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Fitness Planner -->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="GroupProject" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.28902456900000001" green="0.95435437820000002" blue="0.89009639630000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Fitness Planner " id="sLc-30-gsQ"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-468" y="-220"/>
         </scene>
-        <!--Item 2-->
+        <!--Sleep tacker-->
         <scene sceneID="Se7-zg-sXW">
             <objects>
                 <viewController id="rs4-3G-7C7" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="0N3-Ze-d1I">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="9ba-UM-jju"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item 2" id="WlU-Z5-05h"/>
+                    <tabBarItem key="tabBarItem" title="Sleep tacker" id="WlU-Z5-05h"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Le3-LK-1DY" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1345" y="621"/>
+            <point key="canvasLocation" x="-686" y="781"/>
         </scene>
-        <!--Item 1-->
+        <!--Calendar-->
         <scene sceneID="aDP-0f-fYR">
             <objects>
-                <viewController id="eZc-Xe-TGD" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="CalanderViewController" id="eZc-Xe-TGD" customClass="CalanderViewController" customModule="GroupProject" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ahg-6p-oKr">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" red="1" green="0.86115262869999998" blue="0.4997750171" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <viewLayoutGuide key="safeArea" id="4bx-qv-OU6"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item 1" id="j9f-e2-PxN"/>
+                    <tabBarItem key="tabBarItem" title="Calendar" id="j9f-e2-PxN"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IeB-57-WLw" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="367" y="-801"/>
+            <point key="canvasLocation" x="-722" y="-924"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="ewP-wc-7np">
@@ -66,13 +68,14 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="eZc-Xe-TGD" kind="relationship" relationship="viewControllers" id="Qg2-S5-8OJ"/>
                         <segue destination="rs4-3G-7C7" kind="relationship" relationship="viewControllers" id="VFg-Wj-iIg"/>
+                        <segue destination="eZc-Xe-TGD" kind="relationship" relationship="viewControllers" id="Qg2-S5-8OJ"/>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="Vsr-uB-PqX"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FbL-iO-TQP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-888" y="-560"/>
+            <point key="canvasLocation" x="-1972" y="-359"/>
         </scene>
     </scenes>
 </document>
