--- a/GroupProject/Base.lproj/Main.storyboard
+++ b/GroupProject/Base.lproj/Main.storyboard
@@ -158,30 +158,51 @@
                                             <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HwZ-Iz-xEF">
                                                 <rect key="frame" x="0.0" y="0.0" width="45.5" height="30"/>
                                                 <state key="normal" title="Button"/>
+                                                <connections>
+                                                    <segue destination="o0h-6k-9YH" kind="show" id="b9S-i8-dVc"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YAm-OT-BA9">
                                                 <rect key="frame" x="59.5" y="0.0" width="46" height="30"/>
                                                 <state key="normal" title="Button"/>
+                                                <connections>
+                                                    <segue destination="o0h-6k-9YH" kind="show" id="WeI-85-1nr"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7Ze-um-74c">
                                                 <rect key="frame" x="119.5" y="0.0" width="45.5" height="30"/>
                                                 <state key="normal" title="Button"/>
+                                                <connections>
+                                                    <segue destination="o0h-6k-9YH" kind="show" id="o0O-9o-yzX"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eWk-f5-esb">
                                                 <rect key="frame" x="179" y="0.0" width="46" height="30"/>
                                                 <state key="normal" title="Button"/>
+                                                <connections>
+                                                    <segue destination="o0h-6k-9YH" kind="show" id="7Ct-3U-gHI"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lRl-i9-FOY">
                                                 <rect key="frame" x="239" y="0.0" width="45.5" height="30"/>
                                                 <state key="normal" title="Button"/>
+                                                <connections>
+                                                    <segue destination="o0h-6k-9YH" kind="show" id="eAe-Lm-Jis"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iAW-Ry-kN3">
                                                 <rect key="frame" x="298.5" y="0.0" width="46" height="30"/>
                                                 <state key="normal" title="Button"/>
+                                                <connections>
+                                                    <segue destination="o0h-6k-9YH" kind="show" id="vsq-iL-B0k"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LJa-5c-UdV">
                                                 <rect key="frame" x="358.5" y="0.0" width="45.5" height="30"/>
                                                 <state key="normal" title="Button"/>
+                                                <connections>
+                                                    <segue destination="o0h-6k-9YH" kind="show" id="RGv-pn-CUl"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                     </stackView>
@@ -329,7 +350,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="0.76410486238056152" blue="0.34481930879112088" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <color key="backgroundColor" red="0.8173556923866272" green="0.62914472818374634" blue="0.29794448614120483" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="Sfh-HJ-mhR" firstAttribute="leading" secondItem="4bx-qv-OU6" secondAttribute="leading" constant="5" id="8qO-dY-Xjx"/>
                             <constraint firstItem="QQl-zQ-7a2" firstAttribute="leading" secondItem="4bx-qv-OU6" secondAttribute="leading" constant="5" id="DnN-px-oQZ"/>
@@ -430,14 +451,23 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HgN-7e-P13">
-                                <rect key="frame" x="70" y="192" width="307" height="277"/>
+                                <rect key="frame" x="54" y="57" width="307" height="74"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="GjQ-sJ-U8u">
+                                <rect key="frame" x="0.0" y="139" width="414" height="723"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </tableView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" red="1" green="0.76410486239999997" blue="0.3448193088" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="WRw-44-Q2b" firstAttribute="bottom" secondItem="GjQ-sJ-U8u" secondAttribute="bottom" id="8Zy-z5-QpQ"/>
+                            <constraint firstItem="WRw-44-Q2b" firstAttribute="trailing" secondItem="GjQ-sJ-U8u" secondAttribute="trailing" id="NCY-G3-u2F"/>
+                            <constraint firstItem="GjQ-sJ-U8u" firstAttribute="leading" secondItem="WRw-44-Q2b" secondAttribute="leading" id="kMg-oa-v0T"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="WRw-44-Q2b"/>
                     </view>
                     <connections>
